Complete to build and deploy rev_gold contract - #0621

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,14 +1,13 @@
 [package]
-name = "RevGold"
+name = "rev_gold"
 version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-solana-program = "1.18.17"
 anchor-lang = "0.30.0"
 anchor-spl = "0.30.0"
 
 [lib]
-name = "RevGold"
-path = "src/RevGold.rs"
+name = "rev_gold"
+path = "src/lib.rs"
 crate-type = ["cdylib", "lib"]
